--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "servertype": "openocd",
             "executable": "${workspaceRoot}/build/stm32-firmware",
-            "device": "STM32F407VG",
+            "device": "STM32F407xx",
             "gdbPath": "gdb-multiarch",
             "configFiles": [
                 "interface/stlink.cfg",
